RESOLVED FIXED191719
[iOS] Do not get stuck in indeterminate content observation state.
https://bugs.webkit.org/show_bug.cgi?id=191719
Summary [iOS] Do not get stuck in indeterminate content observation state.
alan
Reported 2018-11-15 14:51:40 PST
when the previously installed DOM timer is getting cleared in the mouseenter style update.
Attachments
Patch (4.46 KB, patch)
2018-11-15 20:35 PST, alan
no flags
alan
Comment 1 2018-11-15 20:35:02 PST
WebKit Commit Bot
Comment 2 2018-11-15 21:46:56 PST
Comment on attachment 355018 [details] Patch Clearing flags on attachment: 355018 Committed r238273: <https://trac.webkit.org/changeset/238273>
WebKit Commit Bot
Comment 3 2018-11-15 21:46:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-11-15 21:47:28 PST
Note You need to log in before you can comment on or make changes to this bug.